--- a/src/index.css
+++ b/src/index.css
@@ -201,6 +201,8 @@ a {
     border: solid 2px #8396a8;
     border-radius: 16px;
     display: none;
+    overflow-y: scroll;
+    max-height: 500px;
 }
 #leaderboard td {
     text-align: left;
@@ -213,6 +215,17 @@ a {
     text-align: center;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+    margin: 30px 0;
+}
+::-webkit-scrollbar-thumb {
+    background: #5f7d99;
+    border-radius: 5px;
+}
 
 #namePrompt {
     display: none;
