--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
 .keyboard {
     font-size: 12px;
     position: absolute;
-    left: 0px;
+    left: 40px;
     top: 700px;
 }
 .keyboard div {
@@ -52,19 +52,24 @@ body {
 }
 #spacebar {
     width: 180px;
-    left: 250px;
+    left: 240px;
     top: 60px;
 }
 #zBtn {
-    left: 85px;
+    left: 55px;
     top: 60px;
 }
 #xBtn {
-    left: 115px;
+    left: 85px;
     top: 60px;
 }
+#shiftBtn {
+    left: -17px;
+    top: 111px;
+    width: 75px;
+}
 #escBtn {
-    left: 85px;
+    left: 105px;
     top: 110px;
     width: 45px;
 }
@@ -89,20 +94,24 @@ body {
     top: 1px;
 }
 #spaceTxt {
-    left: 287px;
+    left: 277px;
     top: 97px;
     width: 108px;
 }
 #zTxt {
-    left: 11px;
+    left: -21px;
     top: 63px;
 }
 #xTxt {
-    left: 151px;
+    left: 121px;
     top: 63px;
 }
-#rTxt {
-    left: 67px;
+#shiftTxt {
+    left: px;
+    top: 147px;
+}
+#escTxt {
+    left: 87px;
     top: 147px;
 }
 
@@ -122,7 +131,7 @@ h1 {
     display: flex;
     height: 650px;
     padding: 1.5rem;
-    width: 430px;
+    width: 510px;
 }
 
 #ghostArena {
@@ -135,6 +144,7 @@ h1 {
     height: 600px;
     width: 300px;
     top: 115px;
+    left: 120px;
 }
 
 #startDirection {
@@ -168,6 +178,16 @@ h1 {
 hr {
     border: 1px solid #8396a8;
 }
+#sidebar-left
+{
+    position: absolute;
+    color: #000;
+    padding-left: 20px;
+    width: 100px;
+    font-weight: bold;
+    top: 116px;
+    left: 10px;
+}
 #sidebar
 {
     position: absolute;
@@ -176,7 +196,7 @@ hr {
     width: 100px;
     font-weight: bold;
     top: 100px;
-    left: 340px;
+    left: 420px;
 }
 
 #sidebar div {
