--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,10 @@ body {
     top: 110px;
     width: 45px;
 }
+#pBtn {
+    left: 560px;
+    top: -60px;
+}
 .keyboard span {
     position: absolute;
     text-align: center;
@@ -113,6 +117,10 @@ body {
 #escTxt {
     left: 87px;
     top: 147px;
+}
+#pTxt {
+    left: 547px;
+    top: -74px;
 }
 
 h1 {
