Persist Pause button

--- a/src/index.css
+++ b/src/index.css
@@ -130,8 +130,7 @@ h1 {
     color: #5f7d99;
 }
 
-#tetris
-{
+#tetris {
     background-color: #AAA;
     background-image: linear-gradient(#e1e7ed, #a9bfd4);
     border: solid 2px #8396a8;
